2013-02-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: change the type of fuse_ino_t from 'unsigned long' to
	'uint64_t'

2013-02-19  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_daemonize(): chdir to "/" even if not running in the
	background for consistency.  Reported by Vladimir Rutsky

2013-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_opt_parse(): when storing a newly allocated string for
	format "%s", free the previous value stored at that location.
	Reported by Marco Schuster

2013-02-07  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: add readdirplus support in fuse_lowlevel_ops.  Patch by
	Feng Shuo

	* libfuse: add poll_events to fuse_file_info.  Patch by Enke Chen

	* libfuse: fix fs cleanup.  Reported by Eric Wong

	* libfuse: pass security context options to kernel.  Patch by
	Dalvik Khertel

	* libfuse: remove deprecated features:
	- fuse_is_lib_option()
	- fuse_invalidate()
	- fuse_set_getcontext_func()
	- fuse_loop_mt_proc()
	- fuse_read_cmd()
	- fuse_process_cmd()
	- fuse_setup()
	- fuse_teardown()
	- fuse_exited()
	- fuse_lowlevel_is_lib_option()
	- fuse_operations.getdir()
	- fuse_operations.utime()
	- fuse_operations.utime_omit_ok

2013-02-06  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: set close-on-exec flag on pipe file descriptors.  Patch
	by Eric Wong

	* libfuse: add missing INIT flags

2013-02-05  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix fuse_get_context() in non fuse threads.  Reported
	by Michael Berlin

2013-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix crash in unlock_path().  Patch by Ratna Manoj

	* libfuse: fix the 'remember' option.  The lru list was not
	initialized for the "/" path.  This resulted in remove_node_lru()
	crashing on LOOKUP-DOTDOT.  Patch by Madan Valluri

	* libfuse: configure: detect new util-linux

	* libfuse: Use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
	Patch by Anatol Pomozov

	* libfuse: rename ./configure.in to ./configure.ac.  Patch by
	Anatol Pomozov
